# ros_motion_planning

./: .gitignore
src/core/controller/controller/include/controller/: controller.h
src/core/controller/controller/src/: controller.cpp
src/core/controller/mpc_follow_controller/: CMakeLists.txt  mpc_follow_controller_plugin.xml  package.xml
src/core/controller/mpc_follow_controller/include/controller/: mpc_follow_controller.h
src/core/controller/mpc_follow_controller/src/: mpc_follow_controller.cpp
src/follower_goal_updater/: CMakeLists.txt  package.xml
src/follower_goal_updater/include/follower_goal_updater/: follower_goal_updater.h
src/follower_goal_updater/launch/: follower_goal_updater.launch.xml
src/follower_goal_updater/src/: follower_goal_updater.cpp  follower_goal_updater_node.cpp
src/move_base_follow/: CMakeLists.txt  package.xml
src/move_base_follow/cfg/: MoveBaseFollow.cfg
src/move_base_follow/include/move_base_follow/: move_base_follow.h
src/move_base_follow/src/: move_base_follow.cpp  move_base_follow_node.cpp
src/plugins/dynamic_rviz_config/scripts/: rviz_generate.py
src/plugins/dynamic_xml_config/plugins/: robot_generate.py
src/sim_env/config/controller/: mpc_follow_controller_params.yaml
src/sim_env/launch/: config.launch
src/sim_env/launch/app/: environment_single.launch.xml
src/sim_env/launch/include/location/: amcl.launch.xml
src/sim_env/launch/include/navigation/: move_base.launch.xml  move_base_follow.launch.xml
src/sim_env/rviz/: view_multi.rviz
src/sim_env/scripts/: tf_map2odom.py
src/user_config/: user_config.yaml  user_config_multi.yaml
